# g++ -c src/*.cpp -std=c++14 -O3 -Wall -m64 -I include 
# mkdir -p bin/release 
# g++ *.o -o bin/release/main -s -lSDL2main -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer

# cd src
# cmake --build build
# make

cmake_minimum_required(VERSION 3.4)
project(twini_golf)

add_definitions("-fPIC")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_LINK)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -Wall -m64 -I include")

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

set(VIZGOLF_OUTPUT_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(VIZGOLF_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(VIZGOLF_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(VIZGOLF_LIB_SRC_DIR ${VIZGOLF_SRC_DIR}/lib)
set(VIZGOLF_LIB_INCLUDE_DIR ${VIZGOLF_INCLUDE_DIR} ${VIZGOLF_LIB_SRC_DIR})

set(VIZGOLF_LIBS
    ${Boost_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT})

set(VIZGOLF_LIBS ${VIZGOLF_LIBS} rt)

set(VIZGOLF_OUTPUT_NAME vizgolf)

find_package(Boost 1.65.0 COMPONENTS filesystem thread system date_time chrono regex iostreams REQUIRED)

include_directories(${VIZGOLF_LIB_SRC_DIR} ${Boost_INCLUDE_DIR})

file(GLOB VIZGOLF_LIB_SOURCES
    ${VIZGOLF_LIB_SRC_DIR}/*.h
    ${VIZGOLF_LIB_SRC_DIR}/*.cpp)

add_library(libvizgolf_static STATIC ${VIZGOLF_LIB_SOURCES})
target_link_libraries(libvizgolf_static PRIVATE ${VIZGOLF_LIBS})

add_library(libvizgolf_shared SHARED ${VIZGOLF_LIB_SOURCES})
target_link_libraries(libvizgolf_shared PRIVATE ${VIZGOLF_LIBS})

set_target_properties(libvizgolf_static libvizgolf_shared
    PROPERTIES
    LINKER_LANGUAGE CXX
    LIBRARY_OUTPUT_DIRECTORY ${VIZGOLF_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${VIZGOLF_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_DEBUG ${VIZGOLF_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${VIZGOLF_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${VIZGOLF_OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY ${VIZGOLF_OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${VIZGOLF_OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${VIZGOLF_OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${VIZGOLF_OUTPUT_DIR}
    ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${VIZGOLF_OUTPUT_DIR}
    OUTPUT_NAME ${VIZGOLF_OUTPUT_NAME})

MESSAGE(STATUS "VIZGOLF_LIB_SOURCES:" ${VIZGOLF_LIB_SOURCES})

add_subdirectory(${VIZGOLF_SRC_DIR}/lib_python)
add_subdirectory(${VIZGOLF_SRC_DIR}/vizgolf)